--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,13 @@ requests~=2.28.2
 python-dotenv~=1.0.0
 tzlocal~=4.2
 pillow~=9.4.0
+torch
+transformers
+accelerate
+ftfy
+numpy
+matplotlib
+uuid
+opencv-python
+gradio==3.44.4
+aiofiles
