--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,14 @@
-aiogram~=2.25.1
-requests~=2.28.2
+aiofiles==23.1.0
+aiogram==2.25.1
+aiohttp==3.8.5
+aioredis==2.0.1
+aiosignal==1.3.1
+alembic==1.12.0
+annotated-types==0.5.0
+async-timeout==4.0.3
+asyncpg==0.28.0
+attrs==23.1.0
+certifi==2023.7.22
 python-dotenv~=1.0.0
 tzlocal~=4.2
 pillow~=9.4.0
