--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,8 @@ services:
       - db:/var/lib/postgresql/data
     env_file:
       - .env
+    ports:
+      - "5555:5432"
   bot:
     build:
       context: .
